<resources>
    <string name="app_name">Prenotazioni</string>
    <string name="login">Login</string>
    <string name="prenota">Prenota</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="nome_cognome">Nome Cognome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="data">Data</string>
    <string name="disdici">Disdici</string>
    <string name="svolta">Svolta</string>
    <string name="status">Status</string>
    <string name="lun">Lun</string>
    <string name="mar">Mar</string>
    <string name="mer">Mer</string>
    <string name="gio">Gio</string>
    <string name="ven">Ven</string>
    <string name="non_ci_sono_ripetizioni_attive">Non ci sono ripetizioni attive.</string>
    <string name="ospite">Ospite</string>
    <string name="non_ci_sono_lezioni">Non ci sono lezioni.</string>
</resources>