<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/lun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lun"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/mar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mar" />

        <TextView
            android:id="@+id/mar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mar"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/mer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lun"
            app:layout_constraintTop_toTopOf="@+id/mer" />

        <TextView
            android:id="@+id/mer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mer"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/gio"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mar"
            app:layout_constraintTop_toTopOf="@+id/gio" />

        <TextView
            android:id="@+id/gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gio"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/ven"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mer"
            app:layout_constraintTop_toTopOf="@+id/ven" />

        <TextView
            android:id="@+id/ven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ven"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/gio"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/hoursContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="15-16"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/date16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="16-17"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/date17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="17-18"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/date18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="18-19"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/date19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="19-20"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</LinearLayout>